profile-referral => referral-profile; fix spacing issue

--- a/server/static/scss/referral.scss
+++ b/server/static/scss/referral.scss
@@ -8,7 +8,7 @@
 #feedback			{	list-style:none;		margin: 0 auto;		padding: 0 5px;			}
 #btn-save-referral	{	width:	120px;			}
 
-#profile-reference	{
+#referral-profile {
 	padding: 25px 0 10px;
 }
 
